# mini_hh

./: .gitignore  .ocamlformat  dune-project
lib/common/: base.ml  dune  variance.ml  visibility.ml
lib/ctxt/: classish.ml  classish_def.ml  cont.ml  ctxt.ml  def.ml  dune  fn.ml  local.ml  method.ml  top_level.ml  ty_param.ml
lib/debugging/: dune  handler.ml  history.ml  model.ml  state.ml  status.ml  step.ml
lib/dnf/: clause.ml  dnf.ml  dune  elem.ml  lit.ml
lib/envir/: cont.ml  dune  local.ml  ty_param.ml  ty_param_refine.ml  ty_refine.ml  typing.ml
lib/exposure/: dir.ml  dune  eff.ml  err.ml  exposure.ml  exposure.mli
lib/identifier/: identifier.ml
lib/lang/: binop.ml  class_def.ml  classish_def.ml  classish_kind.ml  def.ml  dune  expr_stmt.ml  fn_def.ml  fn_param_def.ml  intf_def.ml  lang.ml  lit.ml  local.ml  method_def.ml  prog.ml  property_def.ml  static_or_instance.ml  ty_const_def.ml  ty_def.ml  ty_param_bound_def.ml  ty_param_def.ml  unop.ml
lib/name/: dune  name.ml
lib/oracle/: classish.ml  dune  fns.ml  oracle.ml
lib/parce/: dune  lexer.mll  parce.ml  program.mly  program.old
lib/parser/: dune  lexer.mll  parser.ml  program.mly
lib/pretty/: pretty.ml  pretty.mli  pretty_intf.ml
lib/refinement/: ctxt.ml  ctxt.old  down.ml.old  dune  eff.ml  refinement.ml
lib/reporting/: axiom.ml  derivation.ml  dune  loc.ml  located.ml  path.ml  pos.ml  projection.ml  prov.ml  span.ml  witness.ml
lib/source/: dune  helpers.ml  hint.ml  lexer.mll  lexer.old  parse.ml  program.mly
lib/state/: dune  state.ml
test/: dune  run_tests.ml
(+119 files in other folders)
